update flash deals section carousel & landing carousel

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,21 @@
     <!-- Bootstrap Css Config -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
+    <!-- Owl Carousel Css -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+
+    <!-- JQuery js -->
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+
     <title>Folik | Ecommerce</title>
   </head>
   <body>
     <div id="root"></div>
     <!-- Bootstrap Js Config -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <!-- Owl Carousel js -->
+    <script src="assets/js/owl.carousel.min.js"></script>
+
   </body>
 </html>
